fixed solution v2